tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__BoosterTier2-AAAAAAAAAAAAAAAAAAAGww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1731,
  "prerequisites": [
    1724
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The distance between Planets and Moons is much larger now so the rocket needs bigger boosters to reach it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Booster Tier 2",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1724
  ],
  "rewards": [],
  "tasks": []
}
