tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__CN3H7O3PurpleRoc-AAAAAAAAAAAAAAAAAAAKgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2688,
  "prerequisites": [
    851,
    2687
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combine Monomethylhydrazine and Nitric Acid in a Chemical Plant. Make sure to upgrade your casings to Tungstensteel.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lCN3H7O3 (Purple) Rocket Fuel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    851,
    2687
  ],
  "rewards": [],
  "tasks": []
}
